--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,18 @@
     --border-radius: 5px;
 }
 body{
-    margin: 1%;
-    padding: 0;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 #board{
     overflow: hidden;
+    padding: 1%;
     width: 100vw;
-    height: 100vh;
+    height: 95%;
     background-color: green;
-    border: 2px solid #fff;
+    border: 4px solid #fff;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
     border-radius: var(--border-radius);
 
@@ -43,7 +43,7 @@ body{
     margin: 0.2rem;
 
     transform: translate(0,0);
-    transition: all 600ms ease-in-out;
+    transition: transform 600ms ease-in-out;
 }
 .card[data-suit="♥"],
 .card[data-suit="♦"] {
@@ -82,6 +82,7 @@ body{
 .card:hover{
     border-color: blue;
     cursor: default;
+    background-color: rgb(189, 193, 255);
 }
 .btn-group{
     position: absolute;
